--- a/DemoFormulaires/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/DemoFormulaires/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,12 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
+
+<script>
+    // Déclaration d'une méthode de validation personnalisée
+    $.validator.addMethod("codebarrevalide", function (value, element) {
+        return /^100\d{5}$/.test(value);
+    }, "Le code-barres doit commencer par 100 et contenir 8 chiffres.");
+
+    // Attachement de cette règle à un champ via un attribut data
+    $.validator.unobtrusive.adapters.addBool("codebarrevalide");
+</script>
