--- a/DemoFormulaires/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/DemoFormulaires/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -8,7 +8,7 @@
         
         alert("Hello");
         return /^1000\d{4}$/.test(value);
-    }, "Le code-barres doit commencer par 1000 et contenir 8 chiffres.");
+    }, "JQ: Le code-barres doit commencer par 1000 et contenir 8 chiffres.");
 
     // Attachement de cette règle à un champ via un attribut data
     $.validator.unobtrusive.adapters.addBool("codebarrevalide");
