--- a/DemoFormulaires/Views/Epicerie/Nouveau.cshtml
+++ b/DemoFormulaires/Views/Epicerie/Nouveau.cshtml
@@ -4,9 +4,9 @@
 <form action="~/Epicerie/Ajouter" method="get">
 
 	<div class="mb-3">
-		@Html.LabelFor(Model => Model.CodeBarre, htmlAttributes: new { @class = "form-label" })
-		@Html.EditorFor(Model => Model.CodeBarre, new { htmlAttributes = new { @class = "form-control" }})
-		@Html.ValidationMessageFor(Model => Model.CodeBarre, "", new { @class = "text-danger" })
+		@Html.LabelFor(model => model.CodeBarre, htmlAttributes: new { @class = "form-label" })
+		@Html.EditorFor(model => model.CodeBarre, new { htmlAttributes = new { @class = "form-control" }})
+		@Html.ValidationMessageFor(model => model.CodeBarre, "", new { @class = "text-danger" })
 	</div>
 
 	<div class="mb-3">
